# app/Http/Resources/IntegrationWebhookEventResource.php
@@ -27,6 +27,10 @@ class IntegrationWebhookEventResource extends JsonResource
             'payload_hash' => $this->payload_hash,
             'payload_size_bytes' => $this->payload_size_bytes,
             'normalized_payload' => $this->normalized_payload,
+            'integration_system' => new IntegrationSystemResource($this->whenLoaded('integrationSystem')),
+            'person' => new PersonResource($this->whenLoaded('person')),
+            'delivery_metrics_count' => $this->whenCounted('deliveryMetrics'),
+            'delivery_metrics' => PersonDeliveryMetricResource::collection($this->whenLoaded('deliveryMetrics')),
             'received_at' => $this->received_at,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
